# Zappy

./: .gitignore  Doxyfile  LICENSE  Makefile  README.md
src/AI/: Agent.cpp  Agent.hpp  CMakeLists.txt  CommandQueue.cpp  CommandQueue.hpp  Main.cpp  Parser.cpp  Parser.hpp  Socket.cpp  Socket.hpp  WorldState.hpp  doc.md  output_ai.txt
src/AI/Training/: action_decoder.py  model.py  state_encoder.py
src/AI/brain/: ElevationStrategy.cpp  ElevationStrategy.hpp  MapMemory.hpp  Planner.cpp  Planner.hpp  Strategy.hpp  SurviveStrategy.cpp  SurviveStrategy.hpp
src/GUI/: CMakeLists.txt  main.cpp
src/GUI/Event/: Event.hpp  EventDispatcher.hpp  Game.hpp  GameListener.hpp  IEventListener.hpp
src/GUI/Ile/: Code_map.cpp  ez.txt
src/GUI/Ile/2D/: Food.cpp  Food.hpp  Makefile  Player.cpp  Player.hpp  Rendering.cpp  Rendering.hpp  renderingmain.cpp
src/GUI/Renderer/: IRenderer.hpp  Scene.cpp  Scene.hpp
src/GUI/Renderer/3D/: Renderer3D.cpp  Renderer3D.hpp
src/GUI/Renderer/3D/Camera/: Camera.cpp  Camera.hpp
src/GUI/Renderer/3D/DaylightCycle/: DaylightCycle.cpp  (+1 more)
src/GUI/Renderer/State/: 2DState.cpp  2DState.hpp  GameState.cpp  GameState.hpp  IState.hpp  MenuState.cpp  MenuState.hpp  Player.cpp  Player.hpp  StateMachine.hpp
src/GUI/Renderer/Tile/: ITile.hpp  Tile2D.cpp  Tile2D.hpp  Tile3D.cpp  Tile3D.hpp
src/GUI/Renderer/UILayer/: UILayer.cpp  UILayer.hpp
src/GUI/Renderer/Utils/: GLShader.cpp  GLShader.hpp  GLShapeFactory.cpp  GLShapeFactory.hpp  GLUtils.hpp  SPIRVShaderLoader.hpp  ShaderFileLoader.cpp  ShaderFileLoader.hpp  Shape3D.cpp  Shape3D.hpp
src/GUI/SFMLUtils/AnimatedSprites/: AnimatedSprite.cpp  AnimatedSprite.hpp  Example.txt
src/GUI/SFMLUtils/Button/: CircleButton.cpp  CircleButton.hpp  IButton.hpp  RectangleButton.cpp  RectangleButton.hpp
src/GUI/SFMLUtils/InputField/: InputField.cpp  InputField.hpp
src/GUI/SFMLUtils/Slider/: ISlider.hpp  Slider.cpp  Slider.hpp
src/GUI/SFMLUtils/Text/: IText.hpp  Text.cpp  Text.hpp
(+1301 files in other folders)
